--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ header nav {
 /* Main */
 section {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   padding-top: 60px;
 }
 
@@ -161,7 +161,7 @@ section.section-home .welcome-text h1,
 
 section.section-home .welcome-text h1,
 .welcome-text h1 span {
-  width: 440px;
+  width: 20rem;
   font: 700 4rem "Poppins", sans-serif;
   color: #e5e5e5;
 }
@@ -360,4 +360,37 @@ footer .footer-copyright {
 
 footer .footer-copyright a {
   color: #ffc300;
+}
+
+/* Mobile */
+
+@media screen and (max-width: 768px) {
+  section.section-cadastrar,
+  section.section-cadastrar.editar {
+    flex-direction: column;
+    height: 200vh;
+  }
+
+  .section-presentation,
+  .form-container {
+    width: 100%;
+    height: 50%;
+  }
+
+  .section-presentation h1,
+  .section-presentation p {
+    width: 20rem;
+  }
+
+  section.section-listar table {
+    display: flex;
+    overflow: auto;
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    padding: 20px;
+    width: 200px;
+  }
 }
